grammars/ocaml/grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._structure)
    ),

    _structure: $ => choice(
      repeat1(';;'),
      seq(
        repeat(';;'),
        choice($._structure_item, $.toplevel_directive, $.expression_item),
        repeat(choice(
          seq(repeat(';;'), choice($._structure_item, $.toplevel_directive)),
          seq(repeat1(';;'), $.expression_item)
        )),
        repeat(';;')
      )
    ),

    expression_item: $ => seq(
      $._sequence_expression,
      repeat($.item_attribute)
    ),

    _signature: $ => choice(
      repeat1(';;'),
      seq(repeat1(seq(repeat(';;'), $._signature_item)), repeat(';;'))
    ),

    // Toplevel

    value_definition: $ => seq(
      choice(seq('let', optional($._attribute), optional('rec')), $.let_operator),
      sep1(choice('and', $.let_and_operator), $.let_binding)
    ),

    let_binding: $ => prec.right(seq(
      choice(
        // A pattern. Examples:
        //    let x
        //    let (x @ local)
        //    let (x, y)
        // We cannot allow exception patterns here because that would create a
        // conflict: when encountering [let exception], the parser wouldn't be
        // able to determine whether the code is a [$.let_exception_expression]
        // or an [$.exception_pattern] inside a [$.let_binding].
        field('pattern', $._pattern_no_exception),
        // Legacy modes followed by an identifier or a parenthesized operator.
        // Examples:
        //    let local_ x
        //    let local_ ( + )
        seq(
          $._mode_expr_legacy,
          field('pattern', $._value_name)
        ),
      ),
      optional(choice(
        $.at_mode_expr,
        seq(
          repeat($._parameter),
          optional(choice(
            $._maybe_polymorphic_typed_with_optional_modes,
            $.at_mode_expr
          )),
          optional($._coerced),
          '=',
          field('body', $._sequence_expression)
        )
      )),
      repeat($.item_attribute)
    )),

    _parameter: $ => choice(
      $.parameter,
      alias(
        $._parenthesized_abstract_types_with_optional_jkind_annotations,
        $.abstract_types
      )
    ),

    type_definition: $ => seq(
      'type',
      optional($._attribute),
      optional('nonrec'),
      sep1('and', $.type_binding)
    ),

    type_binding: $ => seq(
      optional($._type_params),
      choice(
        seq(
          field('name', $._type_constructor),
          optional($._jkind_annotation),
          optional(seq(
            '=',
            $._type_binding_body
          )),
          repeat($.type_constraint)
        ),
        seq(
          field('name', $.type_constructor_path),
          seq(
            '+=',
            optional('private'),
            field('body', $.variant_declaration)
          )
        )
      ),
      repeat($.item_attribute)
    ),

    _type_binding_body: $ => choice(
      seq(optional('private'), $._type),
      seq(
        optional($.type_synonym),
        optional('private'),
        field('body', choice(
          $.variant_declaration,
          $.record_declaration,
          '..'
        ))
      )
    ),

    _type_params: $ => choice(
      $._type_param,
      parenthesize(sep1(',', seq(
        $._type_param,
        optional($._jkind_annotation)
      )))
    ),

    variant_declaration: $ => choice(
      seq('|', sep('|', $.constructor_declaration)),
      sep1('|', $.constructor_declaration)
    ),

    constructor_declaration: $ => seq(
      choice(
        $._constructor_name,
        alias(choice(seq('[', ']'), seq('(', ')'), 'true', 'false'), $.constructor_name)
      ),
      optional(choice(
        seq('of', $._constructor_argument),
        seq(
          ':',
          optional(seq(
            repeat1($._type_variable_with_optional_jkind_annotation),
            '.'
          )),
          optional(seq($._constructor_argument, '->')),
          $._simple_type
        ),
        seq('=', $.constructor_path)
      ))
    ),

    _constructor_argument: $ => choice(
      sep1('*', seq(
        optional($.modality_legacy),
        $._simple_type,
        optional($.atat_modality_expr)
      )),
      $.record_declaration
    ),

    record_declaration: $ => seq(
      '{',
      sep1(';', $.field_declaration),
      optional(';'),
      '}'
    ),

    field_declaration: $ => seq(
      optional(choice(
        'mutable',
        $.modality_legacy
      )),
      $._field_name,
      $._maybe_polymorphic_typed,
      optional($.atat_modality_expr)
    ),

    module_definition: $ => seq(
      'module', optional($._attribute), optional('rec'),
      sep1('and', $.module_binding)
    ),

    module_binding: $ => seq(
      field('name', choice($._module_name, alias('_', $.module_name))),
      repeat($.module_parameter),
      optional($._module_typed),
      optional(seq(choice('=', ':='), field('body', $._module_expression))),
      repeat($.item_attribute)
    ),

    module_type_definition: $ => seq(
      'module', 'type',
      optional($._attribute),
      field('name', $._module_type_name),
      optional(seq(choice('=', ':='), field('body', $._module_type))),
      repeat($.item_attribute)
    ),

    _module_typed: $ => seq(':', $._module_type),

    _module_type: $ => choice(
      $._simple_module_type,
      $.module_type_constraint,
      $.module_type_of,
      $.functor_type,
      $._extension
    ),

    _module_expression: $ => choice(
      $._simple_module_expression,
      $.module_path,
      $.structure,
      $.functor,
      $.module_application
    ),

    structure: $ => seq(
      'struct',
      optional($._structure),
      'end'
    ),

    _maybe_polymorphic_typed: $ => choice(
      $._typed,
      $._polymorphic_typed
    ),

    _maybe_polymorphic_typed_with_optional_modes: $ => choice(
      $._typed_with_optional_modes,
      $._polymorphic_typed_with_optional_modes
    ),

    _coerced: $ => seq(':>', $._type),

    // One or more abstract types. Does not allow layout annotations. Example:
    //    type t s
    _parenthesized_abstract_types: $ => parenthesize($._abstract_types),

    _type_variable_with_optional_jkind_annotation: $ => choice(
      $.type_variable,
      $.type_variable_with_jkind_annotation
    ),
    _jkind_annotation: $ => seq(':', $.jkind),

    // TODO: Add these choices when they are fully implemented in
    // the language.
    //
    // seq(
    //   $.jkind,
    //   'mod',
    //   $.mode_expr
    // ),
    // seq(
    //   $.jkind,
    //   'with',
    //   $._type
    // ),
    // seq(
    //   'kind_of',
    //   $._type
    // )
    _simple_type: $ => choice(
      $.type_variable,
      $.type_constructor_path,
      $.unboxed_type_constructor_path,
      $.constructed_type,
      $.local_open_type,
      $.polymorphic_variant_type,
      $.package_type,
      $.hash_type,
      $.object_type,
      $.parenthesized_type,
      $.type_variable_with_jkind_annotation,
      $.type_wildcard_with_jkind_annotation,
      $._extension
    ),

    _type: $ => choice(
      $._tuple_type,
      $.function_type,
      $.aliased_type
    ),

    _expression: $ => choice(
      $._simple_expression,
      $.product_expression,
      $.cons_expression,
      $.application_expression,
      $.infix_expression,
      $.sign_expression,
      $.set_expression,
      $.if_expression,
      $.while_expression,
      $.for_expression,
      $.match_expression,
      $.function_expression,
      $.fun_expression,
      $.try_expression,
      $.let_expression,
      $.assert_expression,
      $.lazy_expression,
      $.let_module_expression,
      $.let_open_expression,
      $.let_exception_expression,
      $.mode_legacy_expression,
      $.exclave_legacy_expression
    ),

    _sequence_expression: $ => choice(
      $._expression,
      $.sequence_expression
    ),

    sequence_expression: $ => prec.right(PREC.seq, seq(
      field('left', $._expression),
      ';',
      optional(seq(
        optional($._attribute),
        field('right', $._sequence_expression)
      ))
    )),

    _pattern_no_exception: $ => choice(
      $._simple_pattern,
      $.alias_pattern,
      $.or_pattern,
      $.constructor_pattern,
      $.tag_pattern,
      $.tuple_pattern,
      $.cons_pattern,
      $.range_pattern,
      $.lazy_pattern
    ),

    _pattern: $ => choice(
      $._pattern_no_exception,
      $.exception_pattern
    ),

    constructor_pattern: $ => prec.right(PREC.app, seq(
      $.constructor_path,
      optional(alias($._parenthesized_abstract_types, $.abstract_types)),
      $._pattern
    )),

    attribute: $ => seq(
      alias(/\[@/, '[@'),
      $.attribute_id,
      optional($.attribute_payload),
      ']'
    ),

    item_attribute: $ => seq(
      '[@@',
      $.attribute_id,
      optional($.attribute_payload),
      ']'
    ),

    floating_attribute: $ => seq(
      '[@@@',
      $.attribute_id,
      optional($.attribute_payload),
      ']'
    ),

    attribute_payload: $ => choice(
      $._structure,
      seq(':', optional(choice($._type, $._signature))),
      seq(
        '?',
        $._pattern,
        optional($.guard)
      )
    ),

    extension: $ => seq(
      '[%',
      $.attribute_id,
      optional($.attribute_payload),
      ']'
    ),

    quoted_extension: $ => seq(
      '{%',
      $.attribute_id,
      optional(/\s+/),
      $._quoted_string,
      '}'
    ),

    item_extension: $ => seq(
      '[%%',
      $.attribute_id,
      optional($.attribute_payload),
      ']',
      repeat($.item_attribute)
    ),

    quoted_item_extension: $ => seq(
      '{%%',
      $.attribute_id,
      optional(/\s+/),
      $._quoted_string,
      '}',
      repeat($.item_attribute)
    ),

    _attribute: $ => seq('%', $.attribute_id),

    // Constants

    _quoted_string: $ => seq(
      $._left_quoted_string_delimiter,
      optional($.quoted_string_content),
      $._right_quoted_string_delimiter,
    ),

    quoted_string_content: $ => repeat1(choice(
      token.immediate(/\s/),
      token.immediate(/\[@/),
      /[^%@|]+|%|@|\|/,
      $._null,
      $.conversion_specification,
      $.pretty_printing_indication
    )),

    _value_name: $ => choice(
      alias($._identifier, $.value_name),
      $.parenthesized_operator
    ),

    _mode_expr_legacy: $ => repeat1($.mode_legacy),

    value_path: $ => path($.module_path, $._value_name),

    module_path: $ => prec(1, path($.module_path, $._module_name)),

    constructor_path: $ => path($.module_path, $._constructor_name),

    type_constructor_path: $ => choice(
      path($.extended_module_path, $._type_constructor),
      // For some reason, we have to explicitly add the below option, even
      // though it can be matched by the above option. If we don't include this
      // option, Tree-sitter won't be able to parse [type t = (_, t) t].
      //
      // TODO: Continue searching for a better solution.
      '_'
    ),

    _field_name: $ => alias($._identifier, $.field_name),
    _type_constructor: $ => alias($._identifier, $.type_constructor),
    _module_name: $ => alias($._capitalized_identifier, $.module_name),
    _module_type_name: $ => alias(choice($._capitalized_identifier, $._identifier), $.module_type_name),
    _constructor_name: $ => choice(
      alias($._capitalized_identifier, $.constructor_name),
      parenthesize(alias('::', $.constructor_name))
    ),

    _identifier: $ => /(\\#)?[a-z_][a-zA-Z0-9_']*/,
    _capitalized_identifier: $ => /[A-Z][a-zA-Z0-9_']*/,

    attribute_id: $ => sep1(/\./, choice($._identifier, $._capitalized_identifier))
  },
